fix: on small screen when keyboard appears the dialog would move. so transition the dialog

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ table {
   background-color: var(--main-background);
   padding: var(--space-around-main-container);
   position: relative;
+  transition: all 0.5s ease;
 }
 
 .library-top {
